[gd_scene load_steps=5 format=3 uid="uid://bmt22xxcsssc3"]

[ext_resource type="Script" path="res://scripts/level_5.gd" id="1_5o48c"]
[ext_resource type="PackedScene" uid="uid://cst3b75p1mfpc" path="res://prefabs/world_environment.tscn" id="2_qf3ax"]
[ext_resource type="PackedScene" uid="uid://slug5iqsl8ee" path="res://prefabs/snake_board.tscn" id="3_34p1h"]
[ext_resource type="PackedScene" uid="uid://c4m5ycwqbihjo" path="res://prefabs/small_tank.tscn" id="4_62fxp"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_5o48c")

[node name="WorldEnvironment" parent="." instance=ExtResource("2_qf3ax")]

[node name="SnakeBoard" parent="." instance=ExtResource("3_34p1h")]
unique_name_in_owner = true
position = Vector2(240, 192)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
mouse_filter = 2
color = Color(0, 0.0627451, 0, 1)
metadata/_edit_lock_ = true

[node name="Tank" parent="." instance=ExtResource("4_62fxp")]
unique_name_in_owner = true
position = Vector2(272, 128)

[node name="Tank2" parent="." instance=ExtResource("4_62fxp")]
unique_name_in_owner = true
position = Vector2(176, 256)
rotation = -1.5708

[node name="Tank3" parent="." instance=ExtResource("4_62fxp")]
unique_name_in_owner = true
position = Vector2(816, 240)
rotation = 1.5708

[node name="Tank4" parent="." instance=ExtResource("4_62fxp")]
unique_name_in_owner = true
position = Vector2(560, 768)
rotation = 3.14159
